fixed height issue in full screen mode with too much content

--- a/packages/components/src/styles/components/code-editor/index.scss
+++ b/packages/components/src/styles/components/code-editor/index.scss
@@ -10,6 +10,8 @@
 @import "theme";
 
 .hds-code-editor {
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   background-color: var(--hds-code-editor-color-surface-primary);
   border: 1px solid var(--hds-code-editor-color-border-strong);
@@ -79,8 +81,7 @@
   }
 
   .hds-code-editor__editor {
-    height: 100%;
-    max-height: 600px;
+    flex-grow: 1;
     overflow: auto;
   }
 
